--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
-    //replaced with responsive metatag below from Material UI docs
-    https://material-ui.com/getting-started/usage/
+    <!-- //replaced with responsive metatag below from Material UI docs
+    https://material-ui.com/getting-started/usage/ -->
 
     <meta
       name="viewport"
